# edia

./: .example.env  .gitignore  main.py  main_lastrun.py  pyproject.toml  этап1.xlsx
data/: _main_2023-06-11_18h50.09.712.psydat
src/: components.py  config.py  constants.py  exceptions.py  handlers.py  keyboards.py  logging.py  logging.yml  models.py  runners.py
src/utils/: decorators.py  mixins.py  uploads.py  version.py
