[tool.poetry]
name = "edia-desktop"
version = "1.0.0"
description = ""
authors = ["Ruslan Torbeev <ruslan.torbeev@yandex.ru>"]
readme = "README.md"
packages = [{include = "edia_desktop"}]

[tool.poetry.dependencies]
python = "^3.10"
PsychoPy = "^2023.1.3"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
colorlog = "^6.7.0"
wxpython = "4.1.*"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
